# MyNestEgg

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: calculator.py  main.py
backend/app/routes/: calculator.py  other.py
frontend/: package-lock.json
frontend/src/: App.js  CompoundForm.jsx  index.js
