[project]
name = "backend"
version = "0.1.0"
description = "MyNestEgg backend"
authors = [
    {name = "danlawand",email = "daniel.lawand@gmail.com"}
]
packages = [
    { include = "app" }
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
